Shifted navbar container; fixed slight misalignment of navbar items

--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -73,6 +73,8 @@
   // Selector depth required to match Bootstrap/Athena selectors
   // scss-lint:disable NestingDepth SelectorDepth
   .navbar-nav {
+    margin-right: 0;
+
     .nav-link {
       &:hover,
       &:active {
@@ -82,6 +84,8 @@
     }
 
     .nav-item:last-child {
+      margin-right: -$grid-gutter-width-base / 2;
+
       .nav-link {
         background-color: $brand-primary;
         color: $black;
